--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "bootstrap": "^4.0.0-alpha.5",
     "classnames": "^2.2.5",
     "fastclick": "^1.0.6",
+    "jquery": "^3.1.1",
+    "popper.js": "^1.12.5",
+    "prop-types": "^15.6.0",
     "ramda": "^0.25.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
@@ -17,6 +20,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.5.2",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
@@ -27,19 +31,17 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.9.2",
     "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.7",
-    "browser-sync": "^2.18.6",
-    "browser-sync-webpack-plugin": "^1.1.3",
     "connect-history-api-fallback": "^1.2.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^4.8.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-import": "^2.7.0",
@@ -52,11 +54,13 @@
     "html-webpack-plugin": "^2.26.0",
     "imports-loader": "^0.7.0",
     "jest": "^21.2.1",
-    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "markdown-loader": "^2.0.1",
     "node-sass": "^4.1.1",
     "path-to-regexp": "^2.0.0",
+    "raf": "^3.4.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.0.0",
     "resolve-url-loader": "^2.1.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
@@ -71,8 +75,7 @@
   "babel": {
     "presets": [
       "react",
-      "es2015",
-      "stage-1"
+      "env"
     ],
     "plugins": [
       "transform-runtime"
@@ -82,6 +85,15 @@
     "parser": "babel-eslint",
     "extends": "airbnb"
   },
+  "jest": {
+    "setupFiles": [
+      "raf/polyfill",
+      "./__tests__/setup.js"
+    ],
+    "testMatch": [
+      "**/__tests__/**/?(*.)(spec|test).js?(x)"
+    ]
+  },
   "stylelint": {
     "extends": "stylelint-config-standard",
     "rules": {
@@ -89,7 +101,7 @@
     }
   },
   "scripts": {
-    "start": "webpack-dev-server --port 5000 --content-base dist/ --history-api-fallback",
+    "start": "webpack-dev-server --port 5000 --content-base ./dist --history-api-fallback --hot",
     "build": "webpack --config webpack.production.config.js",
     "eslint": "eslint src __tests__ webpack.config.js webpack.production.config.js",
     "stylelint": "stylelint \"style/**/*.css\"",
