--- a/frontend/package.json
+++ b/frontend/package.json
@@ -112,8 +112,8 @@
     }
   },
   "scripts": {
-    "start": "webpack-dev-server --content-base ./dist",
-    "build": "webpack --config webpack.production.config.js",
+    "build": "webpack --config config/webpack.prod.js",
+    "build:dev": "webpack --config config/webpack.dev.js",
     "eslint": "eslint src __tests__ webpack.config.js webpack.production.config.js",
     "stylelint": "stylelint \"style/**/*.css\"",
     "lint": "npm run eslint && npm run stylelint",
